# trading-pattern-detector

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULAR_ARCHITECTURE_DESIGN.md  README.md  TEST_DRIVEN_DESIGN_APPROACH.md  comprehensive_backtest.py  debug_data.py  demo_enhanced_data_management.py  final_demonstration.py  pyproject.toml  real_aapl_analysis.py  requirements.txt  research_backtesting_libraries.py  simple_aapl_test.py  trade_analyzer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs_archived/: PATTERN_DETECTION_ARCHITECTURE.md  VCP_DESIGN_SPECIFICATION.md
examples/: README.md  advanced_usage.py  basic_usage.py
frontend/: app.py  requirements.txt
frontend/components/: __init__.py
frontend/components/ui/: input_form.py  pattern_selector.py  results_display.py
frontend/config/: __init__.py  settings.py
frontend/integration/: __init__.py  engine.py  error_handler.py  progress.py
frontend/tests/: test_data_manager.py  test_integration.py  test_ui_components.py
frontend/utils/: __init__.py  helpers.py  logger.py
src/: logging_config.py
src/analysis/: __init__.py  support_resistance.py  trend_analyzer.py  volatility_analyzer.py  volume_analyzer.py
src/config/: __init__.py  config_manager.py  detection_settings.py  market_data_config.py  pattern_parameters.py
src/core/: interfaces.py  market_data.py
src/data/: adapters.py  async_manager.py  core.py
src/detectors/: __init__.py  ascending_triangle_detector.py  cup_handle_detector.py  descending_triangle_detector.py  double_bottom_detector.py  falling_wedge_detector.py  flag_detector.py  head_and_shoulders_detector.py  rising_wedge_detector.py  rounding_bottom_detector.py  triangle_detector.py  vcp_detector.py  wedge_detector.py
src/plugins/: __init__.py  plugin_manager.py  plugin_registry.py
src/trading_pattern_detector/: __init__.py  cli.py
src/utils/: __init__.py  data_preprocessor.py  market_data_client.py  signal_aggregator.py
testing/: debug_real_data.py  fetch_top_50_stocks.py  quick_backtest.py  research_backtesting_libraries.py  run_aapl_analysis.py  working_aapl_test.py
tests/: __init__.py  adapter_test_report.md  run_all_tests.py  test_core_interfaces.py  test_fixtures.py  test_new_detectors.py
tests/data/: README.md  __init__.py  run_tests.py  test_adapters.py  test_async_manager.py  test_core_interfaces.py  test_enhanced_preprocessor.py  test_integration.py
tests/data/fixtures/: mock_apis.py  sample_data.py  test_configs.py
